fix: hero img height glitch on mobile

--- a/src/app/(home)/_sections/Hero.module.css
+++ b/src/app/(home)/_sections/Hero.module.css
@@ -49,8 +49,10 @@
 
 	@media (width <= 768px) {
 		display: block;
-		width: 100%;
-		height: 65svh;
+		width: 100vw;
+		max-width: 100%;
+		height: auto;
+		max-height: 65svh;
 		object-fit: cover;
 	}
 }
